--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Storekeeper</title>
-    <link rel="stylesheet/less"  type="text/css" href="css/master.less" />
+    <link rel="stylesheet/less"  type="text/css" href="css/master.less">
     <script src="js/vendor/less-1.1.5.min.js"></script>
   </head>
   <body>
     <div id='storekeeper_app'>
-      <header id="main_header"></header>
-      <div id="main_content">
-      </div>
+      <header id="main_header">
+        <div id="store_logo">Storekeeper</div>
+        <nav id="main_nav">
+          <ul>
+            <li class='current'>Dashboard</li>
+            <li>Orders</li>
+          </ul>
+        </nav>
+        <input type="text" id="search" placeholder="order number">
+      </header>
+      <article id="main_content"></article>
     </div>
     <script src="http://yui.yahooapis.com/3.5.0pr1/build/yui/yui-min.js"></script>
     <script src='js/config.js'></script>
