--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div id="store_logo"></div>
         <nav id="main_nav">
           <ul>
-            <li class='current'>Dashboard</li>
-            <li>Orders</li>
+            <li class='current'><a href="#/">Dashboard</a></li>
+            <li><a href="#/orders">Orders</a></li>
           </ul>
         </nav>
         <input type="text" id="search" placeholder="order number">
@@ -26,7 +26,6 @@
     <script>
       YUI().use("sk:app", function (Y) {
         var app = new Y.SK.App({
-          serverRouting:  false,
           container:      '#main_content'
         }).render();
       });
