order list almost there

--- a/tests/runner.html
+++ b/tests/runner.html
@@ -8,11 +8,11 @@
     </style>
   </head>
   <body>
-    <div id='shopkeeper_app'>
-      <div class="modal_loader">
-        <h1>Storekeeper tests</h1>
-      </div>
+      <h1>Storekeeper tests</h1>
+      <div id="sandbox"></div>
     </div>
+    <script src='../public/js/vendor/handlebars.runtime-1.0.0.beta.6.js'></script>
+    <script src='../public/js/app/views/templates/compiled.js'></script>
     <script src="http://yui.yahooapis.com/3.5.0pr1/build/yui/yui-min.js"></script>
     <script src='test_config.js'></script>
     <script>
