--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       </header>
       <article id="main_content"></article>
     </div>
+    <script src='js/vendor/handlebars.runtime-1.0.0.beta.6.js'></script>
+    <script src='js/app/views/templates/compiled.js'></script>
     <script src="http://yui.yahooapis.com/3.5.0pr1/build/yui/yui-min.js"></script>
     <script src='js/config.js'></script>
     <script>
