a list of orders can now be shown

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div id="store_logo"></div>
         <nav id="main_nav">
           <ul>
-            <li class='current'><a href="#/">Dashboard</a></li>
-            <li><a href="#/orders">Orders</a></li>
+            <li class='tab dashboard current'><a href="#/">Dashboard</a></li>
+            <li class='tab orders'><a href="#/orders">Orders</a></li>
           </ul>
         </nav>
         <input type="text" id="search">
