added storekeeper logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id='storekeeper_app'>
       <header id="main_header">
-        <div id="store_logo">Storekeeper</div>
+        <div id="store_logo"></div>
         <nav id="main_nav">
           <ul>
             <li class='current'>Dashboard</li>
